# winpal_noipc

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  PROBLEME.md  README.md  WinPal.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  instructions.txt
src/: CMakeLists.txt  WinPal.vcxproj  WinPal.vcxproj.filters  cmake_install.cmake  main.cpp
src/Commands/: CommandManager.cpp  CommandManager.h  ExecutionHistory.cpp  ExecutionHistory.h  ICommand.h
src/Core/: AsyncSearchManager.cpp  AsyncSearchManager.h  GuiManager.cpp  GuiManager.h  HotkeyManager.cpp  HotkeyManager.h
src/Plugins/ApplicationLauncher/: ApplicationFinder.cpp  ApplicationFinder.h  GenericLaunchCommand.cpp  GenericLaunchCommand.h  LaunchCalculatorCommand.cpp  LaunchCalculatorCommand.h  LaunchNotepadCommand.cpp  LaunchNotepadCommand.h  LaunchTaskManagerCommand.cpp  LaunchTaskManagerCommand.h  RefreshApplicationsCommand.cpp  RefreshApplicationsCommand.h
src/Plugins/ClipboardManager/: ClearClipboardCommand.cpp  ClearClipboardCommand.h
src/Plugins/DeveloperTools/: OpenGitBashCommand.cpp  OpenGitBashCommand.h  OpenPowerShellCommand.cpp  OpenPowerShellCommand.h
src/Plugins/FileTools/: OpenDesktopCommand.cpp  OpenDesktopCommand.h  OpenDownloadsCommand.cpp  OpenDownloadsCommand.h  OpenFileExplorerCommand.cpp  OpenFileExplorerCommand.h
src/Plugins/NetworkTools/: PingCommand.cpp  PingCommand.h  ShowNetworkInfoCommand.cpp  ShowNetworkInfoCommand.h
src/Plugins/ProcessTools/: EnterProcessModeCommand.cpp  EnterProcessModeCommand.h  OpenProcessPathCommand.cpp  OpenProcessPathCommand.h  TerminateProcessCommand.cpp  TerminateProcessCommand.h
src/Plugins/SystemInfo/: ShowDiskUsageCommand.cpp  ShowDiskUsageCommand.h  ShowSystemInfoCommand.cpp  ShowSystemInfoCommand.h
src/Plugins/SystemSettings/: SettingsCommand.cpp  SettingsCommand.h
